# portfolio

./: .gitignore  .gitmodules  README.md  db.sqlite3  pyproject.toml  requirements.txt  settings_local.py
apps/demohandler/: apps.py  views.py
apps/demohandler/static/demohandler/css/: semantic.min.css  style.css
apps/demohandler/static/demohandler/js/: react.js
apps/demohandler/templates/demohandler/: index.html
apps/portfolio_root/: apps.py  views.py
apps/portfolio_root/migrations/: 0001_initial.py
apps/portfolio_root/templates/portfolio_root/: index.html
apps/portfolio_root/templates/portfolio_root/snippets/: project.html
demo/: settings.py  urls.py  wsgi.py
demohandler/: models.py  views.py
demohandler/static/demohandler/css/: style.css
demohandler/static/demohandler/js/: react.js
demohandler/templates/demohandler/: index.html
demohandler/templates/demohandler/snippets/: project.html
portfolio/: settings.py  urls.py  wsgi.py
