[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Alexander Lyon <arlyon@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
djangorestframework = "^3.11.0"
shortuuid = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
